--- a/tailwind_theme/tailwind.css
+++ b/tailwind_theme/tailwind.css
@@ -759,14 +759,79 @@ select{
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.container{
+  width: 100%;
+}
+@media (min-width: 640px){
+
+
+  .container{
+    max-width: 640px;
+  }
+}
+@media (min-width: 768px){
+
+
+  .container{
+    max-width: 768px;
+  }
+}
+@media (min-width: 1024px){
+
+
+  .container{
+    max-width: 1024px;
+  }
+}
+@media (min-width: 1280px){
+
+
+  .container{
+    max-width: 1280px;
+  }
+}
+@media (min-width: 1536px){
+
+
+  .container{
+    max-width: 1536px;
+  }
+}
+.relative{
+  position: relative;
+}
 .m-2{
   margin: 0.5rem;
 }
 .m-3{
   margin: 0.75rem;
 }
+.-mx-4{
+  margin-left: -1rem;
+  margin-right: -1rem;
+}
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
+.mb-10{
+  margin-bottom: 2.5rem;
+}
 .mb-3{
   margin-bottom: 0.75rem;
+}
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+.ml-auto{
+  margin-left: auto;
+}
+.mr-6{
+  margin-right: 1.5rem;
 }
 .mt-3{
   margin-top: 0.75rem;
@@ -774,44 +839,20 @@ select{
 .mt-4{
   margin-top: 1rem;
 }
-.block{
-  display: block;
+.inline-block{
+  display: inline-block;
 }
 .flex{
   display: flex;
 }
-.h-1\/5{
-  height: 20%;
-}
-.h-5\/6{
-  height: 83.333333%;
-}
-.h-full{
-  height: 100%;
-}
-.max-h-96{
-  max-height: 24rem;
-}
-.max-h-\[800\]{
-  max-height: 800;
-}
-.max-h-\[800px\]{
-  max-height: 800px;
+.h-6{
+  height: 1.5rem;
 }
 .max-h-\[850px\]{
   max-height: 850px;
 }
 .max-h-\[900px\]{
   max-height: 900px;
-}
-.max-h-\[\]{
-  max-height: ;
-}
-.max-h-\[px\]{
-  max-height: px;
-}
-.max-h-full{
-  max-height: 100%;
 }
 .max-h-screen{
   max-height: 100vh;
@@ -821,6 +862,9 @@ select{
 }
 .min-h-screen{
   min-height: 100vh;
+}
+.w-6{
+  width: 1.5rem;
 }
 .w-64{
   width: 16rem;
@@ -837,11 +881,13 @@ select{
 .flex-grow{
   flex-grow: 1;
 }
-.flex-grow-0{
-  flex-grow: 0;
-}
 .cursor-pointer{
   cursor: pointer;
+}
+.appearance-none{
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 .flex-row{
   flex-direction: row;
@@ -849,11 +895,25 @@ select{
 .flex-col{
   flex-direction: column;
 }
+.flex-wrap{
+  flex-wrap: wrap;
+}
 .items-center{
   align-items: center;
 }
 .justify-center{
   justify-content: center;
+}
+.justify-between{
+  justify-content: space-between;
+}
+.justify-items-center{
+  justify-items: center;
+}
+.space-y-6 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 .overflow-hidden{
   overflow: hidden;
@@ -867,6 +927,21 @@ select{
 .rounded-3xl{
   border-radius: 1.5rem;
 }
+.border-2{
+  border-width: 2px;
+}
+.border-blue-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(37 99 235 / var(--tw-border-opacity));
+}
+.bg-blue-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+.bg-gray-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -879,8 +954,33 @@ select{
   -o-object-position: center;
      object-position: center;
 }
+.p-10{
+  padding: 2.5rem;
+}
+.p-3{
+  padding: 0.75rem;
+}
+.p-4{
+  padding: 1rem;
+}
 .p-7{
   padding: 1.75rem;
+}
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 .pb-16{
   padding-bottom: 4rem;
@@ -903,6 +1003,9 @@ select{
 .text-left{
   text-align: left;
 }
+.text-center{
+  text-align: center;
+}
 .font-sans{
   font-family: 'Mulish', sans-serif;
 }
@@ -917,11 +1020,55 @@ select{
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.font-bold{
+  font-weight: 700;
+}
+.font-medium{
+  font-weight: 500;
+}
 .font-semibold{
   font-weight: 600;
 }
+.uppercase{
+  text-transform: uppercase;
+}
 .italic{
   font-style: italic;
+}
+.not-italic{
+  font-style: normal;
+}
+.leading-tight{
+  line-height: 1.25;
+}
+.text-blue-500{
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+.text-gray-800{
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.outline-none{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 .transition{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
@@ -947,24 +1094,38 @@ body{
 body, html {
     min-height: 100vh;
 }
+.hover\:bg-blue-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+.hover\:text-blue-600:hover{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.hover\:text-blue-800:hover{
+  --tw-text-opacity: 1;
+  color: rgb(30 64 175 / var(--tw-text-opacity));
+}
 .hover\:opacity-100:hover{
   opacity: 1;
+}
+.focus\:shadow-lg:focus{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+@media (min-width: 640px){
+
+
+  .sm\:p-16{
+    padding: 4rem;
+  }
 }
 @media (min-width: 768px){
 
 
   .md\:flex{
     display: flex;
-  }
-
-
-  .md\:h-full{
-    height: 100%;
-  }
-
-
-  .md\:max-h-full{
-    max-height: 100%;
   }
 
 
@@ -995,5 +1156,17 @@ body, html {
 
   .md\:duration-500{
     transition-duration: 500ms;
+  }
+}
+@media (min-width: 1024px){
+
+
+  .lg\:w-5\/12{
+    width: 41.666667%;
+  }
+
+
+  .lg\:w-6\/12{
+    width: 50%;
   }
 }
