--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -19,6 +19,8 @@
             <a href="about.html" class="text-blue-500 hover:text-blue-800 mx-2">About</a>
             <span>|</span>
             <a href="dhammadipa.html" class="text-blue-500 hover:text-blue-800 mx-2">Master Dhammadipa</a>
+            <span>|</span>
+            <a href="contact.html" class="text-blue-500 hover:text-blue-800 mx-2">Contact</a>
         </nav>
 
         <!-- block for specific page content -->
